# lab01mlops_hw_sentiment

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  inference.py  pyproject.toml
tests/: test_app.py
